doc proof completion data schema; upgrade spark/scala/jdk versions